--- a/app/templates/enterprises/enterprises.html
+++ b/app/templates/enterprises/enterprises.html
@@ -11,12 +11,13 @@ Enterprises
     <h1>Enterprises</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("enterprises.addEnterprise") }}" role = "button">
         <span class="glyphicon glyphicon-plus"></span></a>
-    <table class = "table">
+    <br><br>
+    <table id = "enterprisesTable" class = "table">
         <thead>
             <tr>
-                <th><a href = "{{ url_for("enterprises.listEnterprises") }}">Name</a></th>
-                <th><a href = "{{ url_for("enterprises.listEnterprises", sortColumn = "Enterprise.Abbreviation") }}">Abbreviation</a></th>
-                <th><a href = "{{ url_for("enterprises.listEnterprises", sortColumn = "Enterprise.Description") }}">Description</a></th>
+                <th>Name</th>
+                <th>Abbreviation</th>
+                <th>Description</th>
                 <th></th>
                 <th></th>
             </tr>
@@ -36,4 +37,28 @@ Enterprises
         </tbody>
     </table>
 </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
+    <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
+    <script>
+        $('#enterprisesTable').DataTable
+        ({
+            order:
+            [
+                [0, 'asc'],             // Name.
+            ],
+            "columns":
+            [
+                null,
+                null,
+                null,
+                { "orderable": false }, // Edit button.
+                { "orderable": false }  // Delete button.
+            ],
+            stateSave: true
+        });
+    </script>
 {% endblock %}
