--- a/app/templates/lookups/lookups.html
+++ b/app/templates/lookups/lookups.html
@@ -8,12 +8,13 @@ Lookups
 <div>
     <h1>Lookups</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("lookups.addLookup") }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
-    <table class = "table">
+    <br><br>
+    <table id = "lookupsTable" class = "table">
         <thead>
             <tr>
                 <th></th>
-                <th><a href = "{{ url_for("lookups.listLookups") }}">Enterprise</a></th>
-                <th><a href = "{{ url_for("lookups.listLookups", sortColumn = "Lookup.Name") }}">Name</a></th>
+                <th>Enterprise</th>
+                <th>Name</th>
                 <th></th>
                 <th></th>
             </tr>
@@ -34,4 +35,29 @@ Lookups
         </tbody>
     </table>
 </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
+    <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
+    <script>
+        $('#lookupsTable').DataTable
+        ({
+            order:
+            [
+                [1, 'asc'],             // Enterprise.
+                [2, 'asc'],             // Name.
+            ],
+            "columns":
+            [
+                { "orderable": false }, // List button.
+                null,
+                null,
+                { "orderable": false }, // Edit button.
+                { "orderable": false }  // Delete button.
+            ],
+            stateSave: true
+        });
+    </script>
 {% endblock %}
