--- a/app/templates/elements/selectElement.html
+++ b/app/templates/elements/selectElement.html
@@ -10,21 +10,18 @@ Data Entry - Elements
 <div>
     <ol class="breadcrumb">
         {% if site %}
-            <li><a href = "{{ url_for("elements.selectElement", className = "root",
-                id = None) }}">..</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", className = "root", id = None) }}">..</a></li>
             <li><a href = "{{ url_for("elements.selectElement", className = site.Enterprise.__class__.__name__,
                 id = site.Enterprise.EnterpriseId) }}">{{ site.Enterprise.Name }}</a></li>
             <li class = "active">{{ site.Name }}</li>
         {% elif elementTemplates %}
-            <li><a href = "{{ url_for("elements.selectElement", className = "root",
-                id = None) }}">..</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", className = "root", id = None) }}">..</a></li>
             {% set firstElementTemplate = elementTemplates | first %}
             <li><a href = "{{ url_for("elements.selectElement", className = firstElementTemplate.Site.Enterprise.__class__.__name__,
                 id = firstElementTemplate.Site.Enterprise.EnterpriseId) }}">{{ firstElementTemplate.Site.Enterprise.Name }}</a></li>
             <li class = "active">{{ firstElementTemplate.Site.Name }}</li>
         {% elif elements %}
-            <li><a href = "{{ url_for("elements.selectElement", className = "root",
-                id = None) }}">..</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", className = "root", id = None) }}">..</a></li>
             {% set firstElement = elements | first %}
             <li><a href = "{{ url_for("elements.selectElement", className = firstElement.ElementTemplate.Site.Enterprise.__class__.__name__,
                 id = firstElement.ElementTemplate.Site.Enterprise.EnterpriseId) }}">{{ firstElement.ElementTemplate.Site.Enterprise.Name }}</a></li>
@@ -34,55 +31,100 @@ Data Entry - Elements
         {% elif enterprises %}
             <li class = "active">..</li>
         {% elif sites %}
-            <li><a href = "{{ url_for("elements.selectElement", className = "root",
-                id = None) }}">..</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", className = "root", id = None) }}">..</a></li>
             {% set firstSite = sites | first %}
-            <li><a href = "{{ url_for("elements.selectElement", className = firstSite.Enterprise.__class__.__name__,
-                id = firstSite.Enterprise.EnterpriseId) }}">{{ firstSite.Enterprise.Name }}</a></li>
-            <li class = "active">Sites</li>
+            <li class = "active">{{ firstSite.Enterprise.Name }}</li>
         {% endif %}
     </ol>
 </div>
 <div>
     {% if site %}
         <h1>Element Templates</h1>
-        <ul class = "list-group">
-        {% for elementTemplate in site.ElementTemplates | sort(attribute = "Name") %}
-            <li class = "list-group-item"><a href = "{{ url_for("elements.selectElement", className = elementTemplate.__class__.__name__,
-                id = elementTemplate.ElementTemplateId) }}">{{ elementTemplate.Name }}</a></li>                
-        {% endfor %}
-        </ul>
     {% elif elementTemplates %}
         <h1>Element Templates</h1>
-        <ul class = "list-group">
-        {% for elementTemplate in elementTemplates | sort(attribute = "Name") %}
-            <li class = "list-group-item"><a href = "{{ url_for("elements.selectElement", className = elementTemplate.__class__.__name__,
-                id = elementTemplate.ElementTemplateId) }}">{{ elementTemplate.Name }}</a></li>                
-        {% endfor %}
-        </ul>
     {% elif elements %}
         <h1>Elements</h1>
-        <ul class = "list-group">
-        {% for element in elements | sort(attribute = "Name") %}
-            <li class = "list-group-item"><a href = "{{ url_for("elements.dashboard", elementId = element.ElementId) }}">{{ element.Name }}</a></li>                
-        {% endfor %}
-        </ul>
     {% elif enterprises %}
         <h1>Enterprises</h1>
-        <ul class = "list-group">
-        {% for enterprise in enterprises | sort(attribute = "Name") %}
-            <li class = "list-group-item"><a href = "{{ url_for("elements.selectElement", className = enterprise.__class__.__name__,                
-                id = enterprise.EnterpriseId) }}">{{ enterprise.Name }}</a></li>                
-        {% endfor %}
-        </ul>
     {% elif sites %}
         <h1>Sites</h1>
-        <ul class = "list-group">
-        {% for site in sites | sort(attribute = "Name") %}
-            <li class = "list-group-item"><a href = "{{ url_for("elements.selectElement", className = site.__class__.__name__, id = site.SiteId) }}">
-                {{ site.Name }}</a></li>                
-        {% endfor %}
-        </ul>
     {% endif %}
+    <table id = "table" class = "table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Name</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if site %}
+                {% for elementTemplate in site.ElementTemplates | sort(attribute = "Name") %}
+                    <tr>
+                        <td><a class = "btn btn-default" href = "{{ url_for("elements.selectElement", className = elementTemplate.__class__.__name__,
+                            id = elementTemplate.ElementTemplateId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
+                        <td>{{ elementTemplate.Name }}</td>
+                        <td>{{ elementTemplate.Description }}</td>
+                    </tr>
+                {% endfor %}
+            {% elif elementTemplates %}
+                {% for elementTemplate in elementTemplates | sort(attribute = "Name") %}
+                    <tr>
+                        <td><a class = "btn btn-default" href = "{{ url_for("elements.selectElement", className = elementTemplate.__class__.__name__,
+                            id = elementTemplate.ElementTemplateId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
+                        <td>{{ elementTemplate.Name }}</td>
+                        <td>{{ elementTemplate.Description }}</td>
+                    </tr>
+                {% endfor %}
+            {% elif elements %}
+                {% for element in elements | sort(attribute = "Name") %}
+                    <tr>
+                        <td><a class = "btn btn-default" href = "{{ url_for("elements.dashboard", elementId = element.ElementId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
+                        <td>{{ element.Name }}</td>
+                        <td>{{ element.Description }}</td>
+                    </tr>
+                {% endfor %}
+            {% elif enterprises %}
+                {% for enterprise in enterprises | sort(attribute = "Name") %}
+                    <tr>
+                        <td><a class = "btn btn-default" href = "{{ url_for("elements.selectElement", className = enterprise.__class__.__name__,                
+                            id = enterprise.EnterpriseId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
+                        <td>{{ enterprise.Name }}</td>
+                        <td>{{ enterprise.Description }}</td>
+                    </tr>
+                {% endfor %}
+            {% elif sites %}
+                {% for site in sites | sort(attribute = "Name") %}
+                    <tr>
+                        <td><a class = "btn btn-default" href = "{{ url_for("elements.selectElement", className = site.__class__.__name__, id = site.SiteId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
+                        <td>{{ site.Name }}</td>
+                        <td>{{ site.Description }}</td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+        </tbody>
+    </table>
 </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
+    <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
+    <script>
+        $('#table').DataTable
+        ({
+            order:
+            [
+                [1, 'asc']              // Name.
+            ],
+            "columns":
+            [
+                { "orderable": false }, // Details button.
+                null,
+                null
+            ],
+            stateSave: true
+        });
+    </script>
 {% endblock %}
