--- a/app/templates/unitOfMeasurements/unitOfMeasurements.html
+++ b/app/templates/unitOfMeasurements/unitOfMeasurements.html
@@ -6,7 +6,7 @@ Units of Measurment
 
 {% block page_content %}
 <div>
-    <h1>Units of Measurment</h1>
+    <h1>Units of Measurement</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("unitOfMeasurements.addUnitOfMeasurement") }}" role = "button">
         <span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
