Removed left over references to sortColumn.

--- a/app/templates/elementTemplates/elementTemplates.html
+++ b/app/templates/elementTemplates/elementTemplates.html
@@ -13,9 +13,9 @@ Element Templates
     <table id = "elementTemplatesTable" class = "table">
         <thead>
             <tr>
-                <th><a href = "{{ url_for("elementTemplates.listElementTemplates") }}">Site</a></th>
-                <th><a href = "{{ url_for("elementTemplates.listElementTemplates", sortColumn = "ElementTemplate.Name") }}">Name</a></th>
-                <th><a href = "{{ url_for("elementTemplates.listElementTemplates", sortColumn = "ElementTemplate.Description") }}">Description</a></th>
+                <th>Site</th>
+                <th>Name</th>
+                <th>Description</th>
                 <th></th>
                 <th></th>
             </tr>
