--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -15,12 +15,8 @@ Tag Values
     <table id = "tagValuesTable" class = "table">
         <thead>
             <tr>
-                <th><a href = "{{ url_for("tagValues.listTagValues", tagId = tag.TagId) }}">Timestamp</a></th>
-                {% if tag.LookupId %}
-                    <th><a href = "{{ url_for("tagValues.listTagValues", tagId = tag.TagId, sortColumn = "LookupValue.Name") }}">Value</a></th>
-                {% else %}
-                    <th><a href = "{{ url_for("tagValues.listTagValues", tagId = tag.TagId, sortColumn = "TagValue.Value") }}">Value</a></th>
-                {% endif %}
+                <th>Timestamp</th>
+                <th>Value</th>
                 <th></th>
                 <th></th>
             </tr>
