--- a/app/templates/tags/tags.html
+++ b/app/templates/tags/tags.html
@@ -30,8 +30,8 @@ Tags
         <tbody>
             {% for tag in tags %}
             <tr>
-                <td><a class = "btn btn-default" title = "List Values" href = "{{ url_for("tagValues.listTagValues", tagId = tag.TagId, 
-                    lookupId = tag.LookupId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
+                <td><a class = "btn btn-default" title = "List Values" href = "{{ url_for("tagValues.listTagValues", tagId = tag.TagId) }}">
+                    <span class="glyphicon glyphicon-list"></span></a></td>
                 <td>{{ tag.Area.Site.Enterprise.Abbreviation + "_" + tag.Area.Site.Abbreviation + "_" + tag.Area.Abbreviation }}</td>
                 <td>{{ tag.Name }}</td>
                 <td>{{ tag.Description }}</td>
