--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
                 </li>
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Tags <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
-                        <li><a href = "{{ url_for("tags.listTags") }}">Tags</a></li>
+                        <li><a href = "{{ url_for("tags.selectTag") }}">Tags</a></li>
                         <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
                         <li><a href = "{{ url_for("tags.exportTags") }}">Export</a></li>
                         <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</span></a></li>
