--- a/app/templates/elements/elementDashboard.html
+++ b/app/templates/elements/elementDashboard.html
@@ -100,8 +100,8 @@
             {% for elementAttribute in elementAttributes %}
             <tr>
                 <td><a class = "btn btn-default" data-toggle = "tooltip" title = "List Values"
-                    href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId) }}">
-                    <span class="glyphicon glyphicon-list"></span></a></td>
+                    href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId,
+                    elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                 <td>{{ elementAttribute.AttributeTemplate.Name }}</td>
                 {% if elementAttribute.Tag.TagValues[0] %}
                     {% set firstTagValue = elementAttribute.Tag.TagValues | sort(attribute = "Timestamp", reverse = True) | first %}
