--- a/app/templates/eventFrameTemplates/selectEventFrameTemplate.html
+++ b/app/templates/eventFrameTemplates/selectEventFrameTemplate.html
@@ -68,6 +68,7 @@ Event Frame Templates
                 <th></th>
                 <th>Name</th>
                 <th>Description</th>
+                <th>Order</th>
                 <th></th>
                 <th></th>
             </tr>
@@ -79,6 +80,11 @@ Event Frame Templates
                         className = child.__class__.__name__, id = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                     <td>{{ child.Name }}</td>
                     <td>{{ child.Description }}</td>
+                    {% if className == None %}
+                        <td>{{ child.Order }}</td>
+                    {% else %}
+                        <td></td>
+                    {% endif %}
                     {% if className == "EventFrameTemplate" or className == None %}
                         <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit" href = "{{ url_for("eventFrameTemplates.editEventFrameTemplate",
                             eventFrameTemplateId = child.id()) }}"><span class="glyphicon glyphicon-edit"></a></td>
@@ -104,11 +110,13 @@ Event Frame Templates
         ({
             order:
             [
+                [3, 'asc'],             // Name.
                 [1, 'asc']              // Name.
             ],
             "columns":
             [
                 { "orderable": false }, // Children button.
+                null,
                 null,
                 null,
                 { "orderable": false }, // Edit button.
