--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -31,6 +31,7 @@ Tag Values
             <li class = "active">{{ tag.Name }}</li>
         {% endif %}
     </ol>
+    <h1>Tag Values</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValues.addTagValue", tagId = tag.TagId) }}" role = "button">
         <span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
