--- a/app/templates/areas/areas.html
+++ b/app/templates/areas/areas.html
@@ -45,7 +45,7 @@ Areas
     <script>
         $('#areasTable').DataTable
         ({
-            order:
+            "order":
             [
                 [0, 'asc'],             // Site.
                 [1, 'asc'],             // Name.
@@ -59,7 +59,9 @@ Areas
                 { "orderable": false }, // Edit button.
                 { "orderable": false }  // Delete button.
             ],
-            stateSave: true
+            "stateSave": true,
+            "stateDuration": 0,
+            "pageLength": 25
         });
     </script>
 {% endblock %}
