--- a/app/templates/elements/elements.html
+++ b/app/templates/elements/elements.html
@@ -44,7 +44,7 @@ Elements
     <script>
         $('#elementsTable').DataTable
         ({
-            order:
+            "order":
             [
                 [0, 'asc'],             // Element template path.
                 [1, 'asc']              // Name.
@@ -57,7 +57,9 @@ Elements
                 { "orderable": false }, // Edit element button.
                 { "orderable": false }  // Delete element button.
             ],
-            stateSave: true
+            "stateSave": true,
+            "stateDuration": 0,
+            "pageLength": 25
         });
     </script>
 {% endblock %}
