--- a/app/templates/enterprises/enterprises.html
+++ b/app/templates/enterprises/enterprises.html
@@ -46,7 +46,7 @@ Enterprises
     <script>
         $('#enterprisesTable').DataTable
         ({
-            order:
+            "order":
             [
                 [0, 'asc'],             // Name.
             ],
@@ -58,7 +58,9 @@ Enterprises
                 { "orderable": false }, // Edit button.
                 { "orderable": false }  // Delete button.
             ],
-            stateSave: true
+            "stateSave": true,
+            "stateDuration": 0,
+            "pageLength": 25
         });
     </script>
 {% endblock %}
