--- a/app/templates/lookupValues/lookupValues.html
+++ b/app/templates/lookupValues/lookupValues.html
@@ -44,7 +44,7 @@ Lookup Values
     <script>
         $('#lookupValuesTable').DataTable
         ({
-            order:
+            "order":
             [
                 [0, 'asc'],             // Lookup.
                 [1, 'asc'],             // Name.
@@ -57,7 +57,9 @@ Lookup Values
                 { "orderable": false }, // Edit button.
                 { "orderable": false }  // Delete button.
             ],
-            stateSave: true
+            "stateSave": true,
+            "stateDuration": 0,
+            "pageLength": 25
         });
     </script>
 {% endblock %}
