--- a/app/templates/tags/selectTag.html
+++ b/app/templates/tags/selectTag.html
@@ -85,7 +85,7 @@ Event Frame Templates
     <script>
         $('#tagsTable').DataTable
         ({
-            order:
+            "order":
             [
                 [1, 'asc'],             // Name.
             ],
@@ -97,7 +97,9 @@ Event Frame Templates
                 { "orderable": false }, // Edit button.
                 { "orderable": false }  // Delete button.
             ],
-            stateSave: true
+            "stateSave": true,
+            "stateDuration": 0,
+            "pageLength": 25
         });
     </script>
 {% endblock %}
