--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,6 +49,18 @@
                     </ul>
                 </li>
                 <li><a href = "{{ url_for("elements.selectElement") }}">Data Entry</a></li>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Permissions <span class="caret"></span></a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("users.listUsers") }}">Users</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class = "nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                    <li><a href = "{{ url_for("authentications.logout") }}">Log Out</a></li>
+                {% else %}
+                    <li><a href = "{{ url_for("authentications.login") }}">Log In</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
