--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,21 +16,24 @@
             <a class = "navbar-brand" href = "/">Brewery Pi</a>
         </div>
         <div class = "navbar-collapse collapse">
+            {% if current_user.is_authenticated %}
             <ul class = "nav navbar-nav">
+                {% if current_user.isAdministrator() %}
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Brewery Modeling <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("enterprises.listEnterprises") }}">Enterprises</a></li>
                         <li><a href = "{{ url_for("sites.listSites") }}">Sites</a></li>
                         <li><a href = "{{ url_for("areas.listAreas") }}">Areas</a></li>
                         <li><a href = "{{ url_for("lookups.listLookups") }}">Lookups</a></li>
+                        <li><a href = "{{ url_for("users.listUsers") }}">Users</a></li>
                     </ul>
                 </li>
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Tags <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
-                        <li><a href = "{{ url_for("tags.selectTag") }}">Tags</a></li>
-                        <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
-                        <li><a href = "{{ url_for("tags.exportTags") }}">Export</a></li>
-                        <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</span></a></li>
+                        <li><a href = "{{ url_for("tags.listTags") }}">Tags</a></li>
+                            <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
+                            <li><a href = "{{ url_for("tags.exportTags") }}">Export</a></li>
+                            <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</span></a></li>
                     </ul>
                 </li>
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Templates <span class="caret"></span></a>
@@ -48,13 +51,15 @@
                         <li><a href = "{{ url_for("elementAttributes.exportElementAttributes") }}">Export</a></li>
                     </ul>
                 </li>
-                <li><a href = "{{ url_for("elements.selectElement") }}">Data Entry</a></li>
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Permissions <span class="caret"></span></a>
+                {% endif %}
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Data Entry <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
-                        <li><a href = "{{ url_for("users.listUsers") }}">Users</a></li>
+                        <li><a href = "{{ url_for("elements.selectElement") }}">Elements</a></li>
+                        <li><a href = "{{ url_for("tags.selectTag") }}">Tags</a></li>
                     </ul>
                 </li>
             </ul>
+            {% endif %}
             <ul class = "nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                     <li><a href = "{{ url_for("authentications.logout") }}">Log Out</a></li>
