--- a/app/templates/users/users.html
+++ b/app/templates/users/users.html
@@ -18,12 +18,15 @@ Users
                 <th>Name</th>
                 <th></th>
                 <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             {% for user in users %}
             <tr>
                 <td>{{ user.Name }}</td>
+                <td><a class = "btn btn-default" title = "Change Password" href = "{{ url_for("users.changePassword", userId = user.UserId) }}">
+                    <span class="glyphicon glyphicon-lock"></span></a></td>
                 <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("users.editUser", userId = user.UserId) }}">
                     <span class="glyphicon glyphicon-edit"></span></a></td>
                 <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("users.deleteUser", 
@@ -49,6 +52,7 @@ Users
             "columns":
             [
                 null,
+                { "orderable": false }, // Change password button.
                 { "orderable": false }, // Edit button.
                 { "orderable": false }  // Delete button.
             ],
