--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,7 +62,12 @@
             {% endif %}
             <ul class = "nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
-                    <li><a href = "{{ url_for("authentications.logout") }}">Log Out</a></li>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Account <span class="caret"></span></a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("authentications.logout") }}">Logout</a></li>
+                        <li><a href = "{{ url_for("users.changePassword", userId = current_user.UserId) }}">Change Password</a></li>
+                    </ul>
+                </li>
                 {% else %}
                     <li><a href = "{{ url_for("authentications.login") }}">Log In</a></li>
                 {% endif %}
