--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,13 @@
                         <li><a href = "{{ url_for("elementAttributes.exportElementAttributes") }}">Export</a></li>
                     </ul>
                 </li>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">System <span class="caret"></span></a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("raspberryPiUtilities.backupDatabase") }}">Backup Database</a></li>
+                        <li><a href = "{{ url_for("raspberryPiUtilities.reboot") }}">Reboot</a></li>
+                        <li><a href = "{{ url_for("raspberryPiUtilities.shutdown") }}">Shutdown</a></li>
+                    </ul>
+                </li>
                 {% endif %}
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Data Entry <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
